@@ -1,8 +1,8 @@
 {
   "timestamp" : "2022-08-08T08:11:57Z",
-  "count" : 34,
-  "count_minmax" : [ 12, 34 ],
-  "count_decinc" : [ -0, +34 ],
+  "count" : 17,
+  "count_minmax" : [ 17, 17 ],
+  "count_decinc" : [ -0, +17 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
