@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-08T00:39:14Z",
+  "timestamp" : "2022-08-08T08:11:57Z",
   "count_outdated" : 1795,
   "uniques_outdated" : 120,
-  "count" : 1834,
-  "uniques" : 128,
+  "count" : 1856,
+  "uniques" : 129,
   "views" : [
     {
       "timestamp": "2022-07-25T00:00:00Z",
@@ -56,8 +56,15 @@
     },
     {
       "timestamp": "2022-08-07T00:00:00Z",
-      "count": 29,
-      "count_minmax": [ 12, 29 ],
+      "count": 34,
+      "count_minmax": [ 12, 34 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-08T00:00:00Z",
+      "count": 17,
+      "count_minmax": [ 17, 17 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
