@@ -1,5 +1,5 @@
 {
-  "count": 39,
+  "count": 61,
   "uniques": 2,
   "views": [
     {
@@ -39,7 +39,12 @@
     },
     {
       "timestamp": "2022-08-07T00:00:00Z",
-      "count": 29,
+      "count": 34,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-08T00:00:00Z",
+      "count": 17,
       "uniques": 1
     }
   ]
