@@ -1,3 +1,10 @@
+2022-08-08T08:11:57Z:
+* notice: last 14d: unq all: 2 61
+* notice: prev accum: outdated-unq outdated-all / unq all: 120 1795 / 128 1834
+* notice: next accum: outdated-unq outdated-all / unq all: 120 1795 / 129 1856
+* notice: prev exec diff / last date diff / accum: unq all: +1 +22 -0 -0 / +1 +17 -0 -0 / 1 17
+* notice: removed / changed dates: [] / [2022-08-07 2022-08-08]
+
 2022-08-08T00:39:14Z:
 * notice: last 14d: unq all: 2 39
 * notice: prev accum: outdated-unq outdated-all / unq all: 120 1795 / 128 1817
